# pypolymlp

./: .pre-commit-config.yaml  LICENSE  README.md  _version.py  build_pip.sh  pyproject.toml  run_polymlp.py  setup.cfg  setup.py  setup.py.cmake  setup_cmake.py  version.py
src/pypolymlp/cxx/: CMakeLists.txt  CMakeLists.txt.20240604  api_cxx.py  api_functions.py  api_neighbor.py  makefile
src/pypolymlp/cxx/bak/: CMakeLists.txt.bak
src/pypolymlp/cxx/bak/20240523/src/compute/: .features.cpp.swp  features.cpp  features.h  functions.cpp  local.cpp  local.h  local_fast.cpp  local_fast.h  model.cpp  model_fast.cpp  model_fast.h  model_properties.cpp  model_properties.h  neighbor.h  neighbor_cell.cpp  neighbor_half.cpp  neighbor_half.h  polymlp_eval.cpp  polymlp_eval.h  py_additive_model.cpp  py_additive_model.h  py_model.cpp  py_model.h  py_properties.h  py_properties_fast.cpp  py_properties_fast.h
src/pypolymlp/cxx/bak/20240523/src/polymlp/: polymlp_basis_function.cpp  (+27 more)
src/pypolymlp/cxx/src/: mlpcpp.h
src/pypolymlp/cxx/src/compute/: features.cpp  features.h  functions.cpp  functions.h  local.cpp  local.h  local_fast.cpp  local_fast.h  local_pair.cpp  local_pair.h  model.cpp  model.h  model_fast.cpp  model_fast.h  model_properties.cpp  model_properties.h  neighbor.cpp  neighbor.h  neighbor_cell.cpp  neighbor_cell.h  neighbor_full.cpp  neighbor_full.h  neighbor_half.cpp  neighbor_half.h  neighbor_half_openmp.cpp  neighbor_half_openmp.h  polymlp_eval.cpp  polymlp_eval.h  polymlp_eval_openmp.cpp  polymlp_eval_openmp.h  polymlp_eval_single.cpp  polymlp_eval_single.h  py_additive_model.cpp  py_additive_model.h  py_features_attr.cpp  py_features_attr.h  py_hybrid_model.cpp  py_hybrid_model.h  py_model.cpp  py_model.h  (+6 more)
src/pypolymlp/cxx/src/compute/bak/: features.h  local_fast.cpp  local_fast.h  py_properties_efficient.cpp  py_properties_efficient.h
src/pypolymlp/cxx/src/compute/eval_single_core/: neighbor_half_single.h  polymlp_eval_function.cpp  polymlp_eval_single.cpp  polymlp_eval_single.h
src/pypolymlp/cxx/src/compute/obsolete_stable/: functions.cpp  local.h  model.cpp  model.h  model_properties.cpp  model_properties.h  py_properties.cpp  py_properties.h
src/pypolymlp/cxx/src/compute/single_core/: neighbor_half_single.cpp
src/pypolymlp/cxx/src/dev/charge/: README  compute_features.cpp  compute_features.h  model_charge_py.cpp  model_charge_py.h
src/pypolymlp/cxx/src/dev/longrange/: ewald.h
src/pypolymlp/cxx/src/dev/obsolete/: model_charge_py.cpp  model_charge_py.h  model_pca.cpp  model_pca.h
src/pypolymlp/cxx/src/dev/projector/: projector.cpp  projector.h
src/pypolymlp/cxx/src/obsolete/: model_pca.h
src/pypolymlp/cxx/src/pending/longrange/: ewald.h
src/pypolymlp/cxx/src/polymlp/: polymlp_api.cpp  polymlp_api.h  polymlp_basis_function.cpp  polymlp_basis_function.h  polymlp_basis_function_boost.cpp  polymlp_basis_function_boost.h  polymlp_eval.h  polymlp_features.cpp  polymlp_features.h  polymlp_features_mapping_utils.cpp  polymlp_features_mapping_utils.h  polymlp_features_polynomial.cpp  polymlp_features_polynomial.h  polymlp_features_utils.cpp  polymlp_features_utils.h  polymlp_functions_interface.cpp  polymlp_functions_interface.h  polymlp_gtinv_binary.cpp  polymlp_gtinv_binary.h  polymlp_gtinv_data.cpp  polymlp_gtinv_data.h  polymlp_gtinv_data_order3.cpp  polymlp_gtinv_data_order3c.cpp  polymlp_gtinv_data_order3l.cpp  polymlp_gtinv_data_order3m.cpp  polymlp_gtinv_data_order4.cpp  polymlp_gtinv_data_order4c.cpp  polymlp_gtinv_data_order4l.cpp  polymlp_gtinv_data_order4m.cpp  polymlp_gtinv_data_order5.cpp  polymlp_gtinv_data_order5.h  polymlp_gtinv_data_order5c.cpp  polymlp_gtinv_data_order5l.cpp  polymlp_gtinv_data_order5m.cpp  polymlp_gtinv_data_order6.cpp  polymlp_gtinv_data_order6c.cpp  polymlp_gtinv_data_order6l.cpp  polymlp_gtinv_data_order6m.cpp  polymlp_gtinv_data_v2.cpp  polymlp_gtinv_data_v2.h  (+45 more)
src/pypolymlp/cxx/src/polymlp/deprecated/: polymlp_gtinv_data_ver2_order1.cpp  polymlp_gtinv_data_ver2_order3.h  polymlp_gtinv_data_ver2_order4.h  polymlp_gtinv_data_ver2_order5.cpp  polymlp_gtinv_data_ver2_order5.h
src/pypolymlp/cxx/src/polymlp/gtinv_data_bak/: polymlp_gtinv_data.h
src/pypolymlp/cxx/src/polymlp/v1_bak/: polymlp_read_gtinv.cpp
src/pypolymlp/cxx/src/polymlp/v2_bak/: polymlp_gtinv_data_v2.h  polymlp_gtinv_data_v2_order1.cpp  polymlp_gtinv_data_v2_order2_l0.cpp  polymlp_gtinv_data_v2_order2_l1.cpp  polymlp_gtinv_data_v2_order2_l10.cpp  polymlp_gtinv_data_v2_order2_l11.cpp  polymlp_gtinv_data_v2_order2_l13.cpp  polymlp_gtinv_data_v2_order2_l14.cpp  polymlp_gtinv_data_v2_order2_l16.cpp  polymlp_gtinv_data_v2_order2_l17.cpp  polymlp_gtinv_data_v2_order2_l18.cpp  polymlp_gtinv_data_v2_order2_l19.cpp  polymlp_gtinv_data_v2_order2_l22.cpp  polymlp_gtinv_data_v2_order2_l23.cpp  polymlp_gtinv_data_v2_order2_l24.cpp  polymlp_gtinv_data_v2_order2_l26.cpp  polymlp_gtinv_data_v2_order2_l27.cpp  polymlp_gtinv_data_v2_order2_l28.cpp  polymlp_gtinv_data_v2_order2_l29.cpp  polymlp_gtinv_data_v2_order2_l3.cpp  polymlp_gtinv_data_v2_order2_l30.cpp  polymlp_gtinv_data_v2_order2_l4.cpp  polymlp_gtinv_data_v2_order2_l7.cpp  polymlp_gtinv_data_v2_order2_l9.cpp  polymlp_gtinv_data_v2_order3_l1.cpp  polymlp_gtinv_data_v2_order3_l10.cpp  polymlp_gtinv_data_v2_order3_l12.cpp  polymlp_gtinv_data_v2_order3_l15.cpp  polymlp_gtinv_data_v2_order3_l16.cpp  polymlp_gtinv_data_v2_order3_l17.cpp  polymlp_gtinv_data_v2_order3_l18.cpp  polymlp_gtinv_data_v2_order3_l2.cpp  polymlp_gtinv_data_v2_order3_l20.cpp  polymlp_gtinv_data_v2_order3_l3.cpp  polymlp_gtinv_data_v2_order3_l4.cpp  polymlp_gtinv_data_v2_order3_l5.cpp  polymlp_gtinv_data_v2_order3_l8.cpp  polymlp_read_gtinv.cpp  polymlp_read_gtinv.h
src/pypolymlp/cxx/src/python/: pybind11_mlp.cpp  pybind11_mlp.h
src/pypolymlp/cxx/wrapper/: api_gtinv_list.py  wrapper.py
src/pypolymlp/polyinv/cxx/: CMakeLists.txt
src/pypolymlp/polyinv/cxx/src/: mlpcpp.h
src/pypolymlp/polyinv/cxx/src/projector/: projector.cpp  projector.cpp.bak  projector.h
src/pypolymlp/polyinv/cxx/src/python/: pybind11_mlp.cpp  pybind11_mlp.h
(+29051 files in other folders)
