[build-system]
requires = [
    "setuptools >= 61.0",
    "scikit-build",
    "ninja",
    "wheel",
    "cmake",
    "make",
    "pybind11",
    "pybind11-global",
    "eigen",
    "numpy",
    "scipy",
    "pyyaml",
]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
